# SDL_Rendering_Test

./: CMakeLists.txt  README.md  Renderer.cpp  Renderer.h  SDL_Rendering_Test.sln  SDL_Rendering_Test.vcxproj  SDL_Rendering_Test.vcxproj.filters  main.cpp
